tests/error/pointer_unknown.gw
#! [contains] unknown type
funptr unknown_type my_fun();
